# CMakeDemo

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
hello/: CMakeLists.txt  main.cpp
hello/inc/: hello.h
hello/lib/: hello.lib
hello/src/: hello.cpp
hello_world/: CMakeLists.txt
hello_world/inc/: hello_world.h
hello_world/lib/: hello_world.lib
hello_world/src/: hello_world.cpp
world/: .gitignore  CMakeLists.txt  main.cpp
world/inc/: world.h
world/lib/: world.lib
world/src/: world.cpp
